Fix list callout icon alignment when text spans multiple lines

--- a/src/site/styles/_list-callouts.scss
+++ b/src/site/styles/_list-callouts.scss
@@ -10,16 +10,24 @@
 .list-callout {
   position: relative;
   display: list-item !important;
+  list-style-position: outside;
   
+  /* Ensure content starts from the top */
   &__line {
     position: relative;
-    display: inline-flex;
-    align-items: center;
-    gap: 4px;
+    display: inline-block;
     padding: var(--list-callout-padding-top) var(--list-callout-padding-right) var(--list-callout-padding-bottom) var(--list-callout-padding-left);
+    width: 100%;
     margin: -2px 0;
     border-radius: 4px;
     background-color: rgba(var(--list-callout-color), var(--list-callout-bg-opacity-light));
+    vertical-align: top;
+  }
+
+  &__content {
+    display: inline-block;
+    line-height: inherit;
+    vertical-align: top;
   }
 
   &__marker {
@@ -28,20 +36,23 @@
     color: rgb(var(--list-callout-color));
     display: inline-flex;
     align-items: center;
-    justify-content: center;
-    line-height: 1;
+    line-height: inherit;
+    margin-right: 0.2rem;
+    padding-bottom: 4px;
+    vertical-align: middle;
     
     i {
       width: 1em;
       height: 1em;
       display: inline-flex;
       align-items: center;
-      justify-content: center;
+      vertical-align: middle;
     }
 
     svg {
       width: 1em;
       height: 1em;
+      vertical-align: middle;
     }
   }
 }
